
======== MuseScore 1.1 released ==============

23.jul (lv)
      - remove spurious "Unknown Node <staff>" or "... <voice>" messages on MusicXML import
      - disable unnecessary voice mapper debug message on MusicXML import
21.jul (la)
      - fix #11605: Shift-X with measure selected -> crash
9.jul  (la)
      - add sori and koron persian accidentals
8.jul  (lv)
      - fix #11441: Failure to read MusicXML file with missing parts
3.jul  (la)
      - fix #10585: Accidental offset in small staves corrupted by saving and reloading (patch by Miwarre)
      - fix #10313: Align settings in Edit Text Style dlg box not stored (patch by Miwarre)
1.jul  (la)
      - fix printing of images (fix #10140: Save as PDF with several images causes crash)
      - implement MuseScore Connect
      - reduce default reverb gain from 0.5 to 0.2
      - open MuseScore maximize on very first startup
      - fix rest position for 1 and 3 staff lines
30.jun (la)
      - fix #11267: Shift + drag tuplet, delete, undo cause crash 
29.jun (ws)
      - fix entry of underline character in lyrics entry mode
        (for german keyboard press Strg+Umsch+"-", for english Ctrl+"_")
      - add sctimesig.cpp to CMakeLists.txt source files
28.jun (la)
      - add alternative brevis notehead group (patch by Miwarre)
      - don't play midi note according to preferences (#10024)
      - change chordnames entry : space goes to the next *beat*/chord/rest, tab
            goes to the next measure. Shift space/tab works as well.
      - add timesig object in plugin framework (patch by Soerboe)
25.jun (lv)
      - fix #11245: MusicXML doesn't save Tempo Text if there's no name
       (la)
      - better handling of Tab key in text element
24.jun (la)
      - fix #11246: change default number of measures and pickup measure timesig
21.jun (la)
      - add more glyphs for old notation (patch from miwarre)
      - add undo support for scnote pitch and tuning
20.jun (la)